feat(core): 新增熔断器功能及异步调用支持
- 设计并实现熔断器接口及默认实现，支持状态管理和自动恢复
- 在 RpcConfig 增加熔断器相关配置项（启用标志、失败阈值、熔断超时时间）
- ServiceProxy 中集成熔断器检查，调用重试前先判断熔断状态，支持快速失败保护
- 新增异步调用接口 invokeAsync，返回 CompletableFuture，支持非阻塞并发调用
- ServiceProxyFactory 增加异步代理创建方法，智能路由区分同步和异步调用
- VertxClient 接口新增异步请求方法，默认实现通过包装同步调用异步执行
- 修正并完善若干代码注释和文档格式，优化代码可读性与一致性